# DeepDeck.Ahuyama.fw

./: .cproject  .gitignore  .project  404.html  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deepdeck_merge_bin.sh  index.html  mkdocs.yml  partitions.csv  programmer.csv  requirements.txt  requirements_advanced.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  sitemap.xml
.github/workflows/: ci.yml  github-actions-deepdeck.yml
assets/javascripts/: bundle.js.map
assets/stylesheets/: main.css  palette.css
blog/: index.html
blog/almost-ready-to-go/: index.html
blog/best-tools-for-productivity/: index.html
blog/getting-ready-for-production/: index.html
blog/good-news-more-its-about-to-come/: index.html
blog/how-to-improve-productivity/: index.html
blog/how-to-keep-focused-at-work/: index.html
blog/landyard_and_fun/: index.html
blog/launch-announcement/: index.html
blog/macropad-definition/: index.html
blog/shipment-in-progress/: index.html
blog/tell-us-about-your-experience-with-deepdeck/: index.html
blog/use-it-with-visual-studio-code/: index.html
blog/useful-keyboard-macros/: index.html
blog/we-made-it/: index.html
blog/workflow-optimization-and-automation/: index.html
components/OtaWebServer/: CMakeLists.txt  README.md  ota.c  wifi.c
components/apds9960/: apds9960.c
components/battery/: CMakeLists.txt  battery_monitor.c
components/ble/: hal_ble.c  hid_device_le_prf.c
components/bus/: CMakeLists.txt  i2c_bus.c
components/espnowmk32/: CMakeLists.txt  espnow_receive.c  espnow_send.c
components/keys/: CMakeLists.txt
components/keys/include/: keys.h
components/keys/src/: keys.c  keys_task.c
components/menu/: CMakeLists.txt
components/menu/include/: menu.h
components/menu/src/: menu.c
components/mqtt_dd/: CMakeLists.txt
components/nvsfuncs/: CMakeLists.txt  nvs_funcs.c
components/oled/: CMakeLists.txt  oled_tasks.c  u8g2_esp32_hal.c
components/parson/: CMakeLists.txt  component.mk  parson.c
components/plugins/: CMakeLists.txt  layout_server.c  ping.c  plugin_manager.c
components/rgb_led/: CMakeLists.txt
components/rgb_led/include/: led_strip.h  rgb_led.h
components/rgb_led/src/: led_strip_rmt_ws2812.c  rgb_led.c
components/rotary_encoder/: CMakeLists.txt
components/rotary_encoder/include/: rotary_encoder.h
components/rotary_encoder/src/: rotary_encoder_pcnt_ec11.c
components/uuid_master/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  uuid.c
components/wifi_and_portal/: CMakeLists.txt
components/wifi_and_portal/include/: internet.h  portal.h  spiffs.h  vpp_system.h  wifi.h
components/wifi_and_portal/src/: internet.c  portal.c  spiffs.c  vpp_system.c  wifi.c
components/wifiman/: CMakeLists.txt  wifi_manager.c
css/: style.scss  styles.css  styles.css.map
docs/: 3dprint.md  connection.md  deepdeck-configuration.md  gesture-sensor.md  index.md  installer.md  knob-configuration.md  known-issues.md  layer-configuration.md  macro-configuration.md  qsg-firmware-update.md  qsg.md  source_code.md  support.md  thankyou.md  vscode-setup.md
docs/API/: thunder-collection_DeepDeck_collection AP Mode.json  thunder-collection_DeepDeck_collection AP-Mode.json
docs/blog/: .authors.yml  index.md
docs/es/: deepdeck-configuration.md  index.md  knob-configuration.md  layer-configuration.md  macro-configuration.md  vscode-setup.md
docs/overrides/: home-es.html  home.html  main-styles.html  main.html
docs/stylesheets/: extra.css  extra.css.map
en/Resources/: index.html
keyboards/default/: keyboard_config.h
keyboards/letSplitIsh/: keyboard_config.h
main/: CMakeLists.txt  deepdeck_tasks.c  deepdeck_tasks.h  gesture_handles.c  gesture_handles.h  idf_component.yml  keyboard_config.h  keymap.c  keymap.h  keypress_handles.c  keypress_handles.h  main.c  matrix.c  matrix.h  mk32_main.cpp  server.c  server.h  server_nvs.c  server_nvs.h  spiffs.c  spiffs.h  wifi_handles.c  wifi_handles.h
main/webApps/: webApps.c  webApps.h
overrides/: blog.html  home-es.html  home.html  main-styles.html  main.html
overrides/css/: style.scss  styles.css  styles.css.map
search/: search_index.json
spiffs_image/: 3rdpartylicenses.txt  4.494015bea35f9f3867c5.js  5.6422738f4b5dd15b9979.js  6.39ffdf2ad7538ad79545.js  index.html  main.30da70af2da9a3a6a34d.js  runtime.69e2362e45d965613aed.js  styles.b5f777b69212ab53c5c8.css
stylesheets/: extra.css  extra.scss
(+133 files in other folders)
